tui/src/chatwidget/snapshots/rexux_tui__chatwidget__tests__guardian_approved_exec_is_hidden_from_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---








› Ask Rexux to do anything

  gpt-5.6-sol default · /tmp/project
