tui/src/chatwidget/snapshots/rexux_tui__chatwidget__tests__guardian_write_stdin_review_status.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
• Reviewing approval request (0s • esc to interrupt)
  └ send input to terminal 42: "confirm\n"


› Ask Rexux to do anything

  gpt-5.6-sol default · /tmp/project
